--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <packaging>pom</packaging>
     <version>1.1.0</version>
     <modules>
-        <module>easyjdbc</module>
+        <module>easyjdbc-core</module>
         <module>easyjdbc-spring-boot-starter</module>
     </modules>
 
