--- a/easyjdbc-spring-boot-starter/pom.xml
+++ b/easyjdbc-spring-boot-starter/pom.xml
@@ -2,13 +2,54 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <groupId>com.github.xphsc</groupId>
-    <modelVersion>4.0.0</modelVersion>
-    <version>1.1.0</version>
-    <packaging>jar</packaging>
-
-
+      <modelVersion>4.0.0</modelVersion>
+    <groupId>cn.xphsc.boot</groupId>
     <artifactId>easyjdbc-spring-boot-starter</artifactId>
+    <version>2.0.5</version>
+    <packaging>jar</packaging>
+    <description>Spring-Boot Starter for  easyjdbc support</description>
+    <parent>
+        <groupId>org.sonatype.oss</groupId>
+        <artifactId>oss-parent</artifactId>
+        <version>7</version>
+    </parent>
+    <licenses>
+        <license>
+            <name>The Apache Software License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
 
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <spring-boot.version>1.5.3.RELEASE</spring-boot.version>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <java.version>1.8</java.version>
+        <easyjdbc.version>2.0.5</easyjdbc.version>
+        <easyjdbc-spring-boot-autoconfigure.version>2.0.5</easyjdbc-spring-boot-autoconfigure.version>
+    </properties>
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
+            <version>${spring-boot.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-jdbc</artifactId>
+            <version>${spring-boot.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>cn.xphsc</groupId>
+            <artifactId>easyjdbc</artifactId>
+            <version>${easyjdbc.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>cn.xphsc.boot</groupId>
+            <artifactId>easyjdbc-spring-boot-autoconfigure</artifactId>
+            <version>${easyjdbc-spring-boot-autoconfigure.version}</version>
+        </dependency>
+    </dependencies>
 
 </project>
